# dominator-charts

./: .gitignore  Demo.hs  README.md  default.nix  dominator-charts.cabal  isomaniac-charts.cabal  shell.nix
Graphics/Dominator/Charts/: Core.hs  Line.hs  Scatter.hs
Graphics/Isomaniac/Charts/: Core.hs
